# shishkin_forest

./: .gitignore  BuildIR.cpp  CMakeLists.txt  CheckTypes.cpp  ListActivations.cpp  README.md  READMEmd  common.h  graph.cpp  lexer.lex  makefile  parseFile.sh  runFlex.sh  spec.y  spec.yy  tableTest.cpp
ActivationRecords/: Access.h  Frame.h  FrameFiller.cpp  FrameFiller.h  InFrameAccess.cpp  InFrameAccess.h  InRegAccess.cpp  InRegAccess.h  Temp.cpp  Temp.h  TempAddress.cpp  TempAddress.h  TypeSpec.h  X86MiniJavaFrame.cpp  X86MiniJavaFrame.h
CodeGeneration/: IInstruction .h  Instruction.h
Framework/: DotPrint.h  Factory.hpp
IR/: AcceptIRVisitor.cpp  ArrayStruct.cpp  ArrayStruct.h  CTempList.h  IRNodeTypes.h  IRVisitor.h  Label.cpp  Label.h  List.h  NameConventions.h  Node.h
IR/Expressions/: Binop.h  Call.h  Const.h  Eseq.h  IExp.h  Mem.h  Name.h  Temp.cpp  Temp.h  Unaryop.h
IR/Statements/: Exp.h  IStm.h  Jump.h  JumpC.h  LabelStm.h  Move.h  Seq.h
IR/Translate/: EseqCanonizer.cpp  EseqCanonizer.h  ExpWrapper.cpp  ExpWrapper.h  IRBuilder.cpp  IRBuilder.h  IRPrinter.cpp  IRPrinter.h  Linerazier.cpp  Linerazier.h  Linerizer.cpp  NoJumpBlock.cpp  NoJumpBlock.h  StmWrapper.h  SubtreeWrapper.h
PrettyPrint/: PrintVisitor.cpp  PrintVisitor.h
RegLifecycle/: LifecycleGraph.cpp  LifecycleGraph.h  LifecycleNode.cpp  LifecycleNode.h  LifecyclePrinter.cpp  LifecyclePrinter.h  VariableGraph.cpp  VariableGraph.h  VariableGraphPrinter.cpp  VariableGraphPrinter.h
Samples/: APlusB.java  Main.java  Print.java  TreeVisitor.java
SymbolTable/: AddressExit.cpp  AddressExit.h  AddressReturnValue.cpp  AddressReturnValue.h  ClassInfo.cpp  ClassInfo.h  ClassStruct.cpp  ClassStruct.h  DeclarationException.cpp  DeclarationException.h  FramePointer.cpp  FramePointer.h  MethodInfo.cpp  MethodInfo.h  Position.cpp  Position.h  StackPointer.cpp  StackPointer.h  StringSymbol.cpp  StringSymbol.h  Symbol.cpp  Symbol.h  Table.cpp  Table.h  TableFiller.cpp  TableFiller.h  Test.cpp  Test.h  TypeStackVisitor.cpp  TypeStackVisitor.h  VariableInfo.cpp  VariableInfo.h  test.cpp
SyntaxTree/: AcceptVisitor.cpp  ArrayLengthExpression.h  ArrayMemberExpression.h  BinaryExpression.h  CallMemberExpression.h  ClassDeclaration.h  ContainerExpression.h  ExpressionSequence.h  Id.h  IdExpression.h  MainClass.h  MethodDeclaration.h  NewIntArrayExpression.h  NewObjectExpression.h  NodeTypes.h  NotExpression.h  Program.h  Qualifier.h  Sequence.h  ThisExpression.h  TreeNode.cpp  TreeNode.h  TreeTypes.h  Type.h  ValueExpression.h  VarDeclaration.h  Visitor.h  common.h
SyntaxTree/Expressions/: ArrayLengthExpression.h  ArrayMemberExpression.h  BinaryExpression.h  CallMemberExpression.h  ContainerExpression.h  Expression.h  ExpressionSequence.h  Expressions.h  IdExpression.h  NewIntArrayExpression.h  NewObjectExpression.h  NotExpression.h  ThisExpression.h  ValueExpression.h
SyntaxTree/Statements/: AssignArrayElementStatement.h  AssignStatement.h  BracedSequenceStatement.h  IfElseStatement.h  PrintLineStatement.h  ReturnStatement.h  Statement.h  StatementSequence.h  Statements.h  WhileStatement.h
TestActivationRecords/: FrameFiller.cpp  FrameFiller.h
TestSymbolTable/: TableVisitor.cpp  TableVisitor.h
TypeChecker/: TypeChecker.cpp  TypeChecker.h
X86/: Dependencies.cpp  X86CodeGeneration.cpp  X86CodeGeneration.h  X86InstructionSet.cpp  X86InstructionSet.h  X86MiniJavaClassStruct.cpp  X86MiniJavaClassStruct.h  X86MiniJavaFrame.cpp  X86MiniJavaFrame.h  X86MiniJavaTypeSpec.cpp  X86MiniJavaTypeSpec.h
scripts/: buildAll.sh  buildIR.sh  buildIRMemCheck.sh  checkTypes.sh  checkTypesMemCheck.sh  generateTokenHeader.sh  iterateOver.sh  listActivations.sh  listActivationsMemCheck.sh  listClasses.sh  listClassesMemCheck.sh  parseFile.sh  parseFileMemCheck.sh
